--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,34 +1,40 @@
-name: Python Package using Conda
+name: pygcdm tests
 
 on: [push]
 
 jobs:
-  build-macos:
-    runs-on: macos-latest
+  RunTests:
+    name: ${{ matrix.os }} ${{ matrix.python-version }}
+    runs-on: ${{ matrix.os }}-latests
     strategy:
       max-parallel: 5
+      fail-fast: false
+      matrix:
+        python-version: [3.9]
+        os: [macOS]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
+    - name: Checkout source
+      uses: actions/checkout@v2.3.4
       with:
-        python-version: 3.9
-    - name: Add conda to system path
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
+        fetch-depth: 100
+    
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: conda-incubator/setup-miniconda@v2.1.1
+      with:
+        miniforge-version: latest
+        miniforge-variant: mambaforge
+        python-version: ${{ matrix.python-version }}
+        channel-priority: strict
+        channels: conda-forge/label/testing,conda-forge
+        show-channel-urls: true
+        # Needed for caching
+        use-only-tar-bz2: true
+     
     - name: Install dependencies
-      run: |
-        conda env update --file environment.yml --name base
-    - name: Lint with flake8
-      run: |
-        conda install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+      run: mamba install --quiet --yes --file environment.yml
+      
+    - name: Run tests
       run: |
         pytest test/unit_tests.py
         pytest test/functional_tests.py
