--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -18,21 +18,18 @@ jobs:
       uses: actions/checkout@v2.3.4
       with:
         fetch-depth: 100
-    
+        
     - name: Set up Python ${{ matrix.python-version }}
       uses: conda-incubator/setup-miniconda@v2.1.1
       with:
         miniforge-version: latest
-        miniforge-variant: mambaforge
         python-version: ${{ matrix.python-version }}
         channel-priority: strict
         channels: conda-forge/label/testing,conda-forge
         show-channel-urls: true
-        # Needed for caching
-        use-only-tar-bz2: true
      
     - name: Install dependencies
-      run: mamba install --quiet --yes --file environment.yml
+      run: conda env create --file environment.yml
       
     - name: Run tests
       run: |
