--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -23,13 +23,14 @@ jobs:
       uses: conda-incubator/setup-miniconda@v2.1.1
       with:
         miniforge-version: latest
+        miniforge-variant: mambaforge
         python-version: ${{ matrix.python-version }}
         channel-priority: strict
         channels: conda-forge/label/testing,conda-forge
         show-channel-urls: true
      
     - name: Install dependencies
-      run: conda env create --file environment.yml
+      run: mamba install --quiet --yest --file ci/requirements.txt
       
     - name: Run tests
       run: |
