--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -6,6 +6,9 @@ jobs:
   RunTests:
     name: ${{ matrix.os }} ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}-latest
+    defaults:
+      run:
+        shell: bash -l {0}
     strategy:
       max-parallel: 5
       fail-fast: false
@@ -18,17 +21,14 @@ jobs:
       uses: actions/checkout@v2.3.4
       with:
         fetch-depth: 100
-        
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+          
+    - name: Install miniconda and environment
+      uses: conda-incubator/setup-miniconda@v2
       with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Install dependencies
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        $CONDA/bin/conda env update --file environment.yml --name base
-
+          activate-environment: anaconda-client-env
+          environment-file: environment.yml
+          python-version: ${{ matrix.python-version }}
+          auto-activate-base: false
       
     - name: Run tests
       run: |
