--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -22,13 +22,16 @@ jobs:
       with:
         fetch-depth: 100
           
-    - name: Install miniconda and environment
+    - name: Install miniconda 
       uses: conda-incubator/setup-miniconda@v2
       with:
+          miniforge-version: latest
           activate-environment: anaconda-client-env
-          environment-file: environment.yml
           python-version: ${{ matrix.python-version }}
-          auto-activate-base: false
+          channels: anaconda, conda-forge, defaults
+
+    - name: Install dependencies
+      run: conda install --yes --file ci/requirements.txt
       
     - name: Run tests
       run: |
