--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install miniconda and environment
       uses: conda-incubator/setup-miniconda@v2
       with:
-          activate-environment: anaconda-client-env
+          activate-environment: test-env
           environment-file: environment.yml
           python-version: ${{ matrix.python-version }}
           auto-activate-base: false
