--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -26,12 +26,10 @@ jobs:
       uses: conda-incubator/setup-miniconda@v2
       with:
           miniforge-version: latest
+          environment-file: ci/environment.yml
           activate-environment: anaconda-client-env
           python-version: ${{ matrix.python-version }}
           channels: anaconda, conda-forge, defaults
-
-    - name: Install dependencies
-      run: conda install --yes --file ci/requirements.txt
       
     - name: Run tests
       run: |
