--- a/environment.yml
+++ b/environment.yml
@@ -1,136 +1,13 @@
-name: netcdf-grpc-env
+name: test_env
 channels:
   - anaconda
   - conda-forge
   - defaults
 dependencies:
-  - astor=0.8.1
-  - attrs=21.2.0
-  - blas=1.0
-  - bokeh=2.3.3
-  - bottleneck=1.3.2
-  - ca-certificates=2020.10.14
-  - certifi=2021.5.30
-  - cftime=1.5.0
-  - click=8.0.1
-  - cloudpickle=1.6.0
-  - codespell=2.1.0
-  - curl=7.71.1
-  - cytoolz=0.11.0
-  - dask=2021.7.2
-  - dask-core=2021.7.2
-  - distributed=2021.7.2
-  - doc8=0.9.0
-  - docutils=0.17.1
-  - flake8=3.9.2
-  - flake8-bugbear=21.4.3
-  - flake8-builtins=1.5.3
-  - flake8-comprehensions=3.6.1
-  - flake8-continuation=1.0.5
-  - flake8-copyright=0.2.2
-  - flake8-docstrings=1.6.0
-  - flake8-isort=4.0.0
-  - flake8-mutable=1.2.0
-  - flake8-polyfill=1.0.2
-  - flake8-print=4.0.0
-  - flake8-quotes=3.3.0
-  - flake8-rst-docstrings=0.2.3
-  - flake8-simplify=0.14.1
-  - freetype=2.10.4
-  - fsspec=2021.7.0
-  - hdf4=4.2.13
-  - hdf5=1.10.6
-  - heapdict=1.0.1
-  - importlib-metadata=4.8.1
-  - importlib_metadata=4.8.1
-  - iniconfig=1.1.1
-  - intel-openmp=2021.3.0
-  - isort=5.9.3
-  - jinja2=3.0.1
-  - jpeg=9d
-  - krb5=1.18.2
-  - lcms2=2.12
-  - libcurl=7.71.1
-  - libcxx=10.0.0
-  - libedit=3.1.20191231
-  - libffi=3.3
-  - libgfortran=3.0.1
-  - libnetcdf=4.6.1
-  - libpng=1.6.37
-  - libssh2=1.9.0
-  - libtiff=4.2.0
-  - libwebp-base=1.2.0
-  - llvm-openmp=12.0.1
-  - locket=0.2.0
-  - lz4-c=1.9.2
-  - markupsafe=2.0.1
-  - mkl=2021.3.0
-  - mkl-service=2.4.0
-  - mkl_fft=1.3.0
-  - mkl_random=1.2.2
-  - more-itertools=8.5.0
-  - msgpack-python=1.0.2
-  - ncurses=6.2
   - netcdf4=1.5.7
   - numpy=1.20.3
-  - numpy-base=1.20.3
-  - olefile=0.46
-  - openssl=1.1.1l
-  - packaging=21.0
-  - pandas=1.2.4
-  - partd=1.2.0
-  - pbr=5.6.0
-  - pep8-naming=0.12.1
-  - pillow=7.2.0
-  - pip=21.2.2
-  - pluggy=0.12.0
-  - psutil=5.8.0
-  - py=1.9.0
-  - pycodestyle=2.7.0
-  - pydocstyle=6.1.1
-  - pyflakes=2.3.1
-  - pygments=2.10.0
-  - pyparsing=2.4.7
   - pytest=6.2.4
-  - python=3.9.6
-  - python-dateutil=2.8.2
-  - python_abi=3.9
-  - pytz=2021.1
-  - pyyaml=5.4.1
-  - readline=8.1
-  - restructuredtext_lint=1.3.2
-  - scipy=1.6.2
-  - setuptools=52.0.0
-  - six=1.16.0
-  - snowballstemmer=2.1.0
-  - sortedcontainers=2.4.0
-  - sqlite=3.36.0
-  - stevedore=3.4.0
-  - tblib=1.7.0
-  - testfixtures=6.18.1
-  - tk=8.6.10
-  - toml=0.10.1
-  - toolz=0.11.1
-  - tornado=6.1
-  - typing_extensions=3.10.0.0
-  - tzdata=2021a
-  - wheel=0.36.2
   - xarray=0.19.0
-  - xz=5.2.5
-  - yaml=0.2.5
-  - zict=2.0.0
-  - zipp=3.5.0
-  - zlib=1.2.11
-  - zstd=1.4.5
   - pip:
-    - appdirs==1.4.4
     - grpcio==1.39.0
     - grpcio-tools==1.39.0
-    - jedi==0.18.0
-    - mccabe==0.6.1
-    - parso==0.8.2
-    - prompt-toolkit==3.0.20
-    - protobuf==3.17.3
-    - ptpython==3.0.19
-    - wcwidth==0.2.5
-prefix: /Users/rmcmahon/opt/anaconda3/envs/netcdf-grpc-env
