--- a/ci/environment.yml
+++ b/ci/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - netcdf4=1.5.7
   - numpy=1.20.3
   - pytest=6.2.4
+  - pytest-cov=6.2.4
   - xarray=0.19.0
   - pip:
     - grpcio==1.39.0
